Improved the JavaScript visualization.

--- a/Homework/Week 3/index.html
+++ b/Homework/Week 3/index.html
@@ -1,3 +1,8 @@
+<!--
+	Name: Vincent Erich
+	Student number: 10384081
+-->
+
 <!DOCTYPE html>
 
 <html>
@@ -5,7 +10,7 @@
 		<meta charset="utf-8"/>
 		<title>Weather Data</title>
 		<body>
-			<canvas id="mycanvas" width="750" height="400">
+			<canvas id="mycanvas" width="850" height="550">
 				Your browser does not support this feature.
 			</canvas>
 			<textarea id="rawdata">
@@ -376,7 +381,7 @@
 				1995/09/20,173
 				1995/09/21,176
 			</textarea>
-			<script src="js/script.js"></script>
+			<script type="text/javascript" src="js/script.js"></script>
 		</body>
 	</head>
 </html>
