Finished homework week 3.

--- a/Homework/Week 3/index.html
+++ b/Homework/Week 3/index.html
@@ -2,7 +2,6 @@
 	Name: Vincent Erich
 	Student number: 10384081
 -->
-
 <!DOCTYPE html>
 
 <html>
@@ -11,7 +10,7 @@
 		<title>Weather Data</title>
 		<body>
 			<canvas id="mycanvas" width="850" height="550">
-				Your browser does not support this feature.
+				The graph cannont be displayed in your web browser.
 			</canvas>
 			<textarea id="rawdata">
 				#date,maxtemp
