Finished homework 6 problem 2.

--- a/Homework/Week 6/d3line/d3line.html
+++ b/Homework/Week 6/d3line/d3line.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!-- 
+	Name: Vincent Erich
+	Student number: 10384081
+-->
 
 <html>
 	<head>
@@ -11,7 +15,7 @@
 	<body>
 		<script src="js/d3line.js"></script>
 		<div class="explanation">
-			<p>Explanation data source here...<p>
+			<p>The graph above shows the maximum temperature at the De Bilt weather station from September 22, 1994 - September 21, 1995 (including). The data is from the <a href="http://projects.knmi.nl/klimatologie/daggegevens/selectie.cgi">web page</a> of the KNMI (the Royal Dutch Meteorological Institute). Hover over the graph to see the maximum temperature on a specific date.<p>
 		</div>
 	</body>
 </html>
