--- a/Homework/Week 6/d3line/d3line.html
+++ b/Homework/Week 6/d3line/d3line.html
@@ -8,9 +8,8 @@
 	<head>
 		<title>D3 line graph</title>
 		<link rel="stylesheet" type="text/css" href="style/d3line.css"/>
-		<!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
-		<!-- <script src="js/d3.js"></script> -->
-		<script src="js/d3.min.js"></script>
+		<!-- D3 -->
+		<script src="../D3/d3.min.js"></script>
 	</head>
 	<body>
 		<script src="js/d3line.js"></script>
